--- a/.ssh/config
+++ b/.ssh/config
@@ -2,3 +2,8 @@ host github.com
  HostName github.com
  IdentityFile ~/.ssh/id_rsa
  User git
+
+host pique
+ HostName pique
+ IdentityFile ~/.ssh/id_rsa.nikhef
+ User hisparc
