Add tietar to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -7,3 +7,8 @@ host pique
  HostName pique
  IdentityFile ~/.ssh/id_rsa.nikhef
  User hisparc
+
+host tietar
+ HostName tietar
+ IdentityFile ~/.ssh/id_rsa.nikhef
+ User hisparc
