Add frome to ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -12,3 +12,8 @@ host tietar
  HostName tietar
  IdentityFile ~/.ssh/id_rsa.nikhef
  User hisparc
+
+host frome
+ HostName frome
+ IdentityFile ~/.ssh/id_rsa.nikhef
+ User hisparc
